dep-mul-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-ngix-multi
  labels:
    app: nginx-multi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multi
  template:
    metadata:
      labels:
        app: nginx-multi
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: configmap-volume
          mountPath: /usr/share/nginx/html/
          readOnly: true
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 1180
          name: http-port
        - containerPort: 11443
          name: https-port
      volumes:
      - name: map-volume
        configMap:
          name: my-config-map
          # An array of keys from the ConfigMap to create as files
          items:
          - key: "index.html" 
            path: "index.html"
