srv-nginx-multi-con-map.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx-multi-conf-map
spec:
  selector:
    app: nginx-multi
  ports:
    - name: nginx
      protocol: TCP
      port: 9003
      targetPort: 80
